feat: added auth mode support
