# api/src/constants/constant_types.rs
@@ -1,19 +1,21 @@
 pub const SERVER_URL: &str = "BASE_URL";
 
-pub const USERNAME:&str = "USERNAME";
-pub const PASSWORD:&str = "PASSWORD";
+pub const USERNAME: &str = "USERNAME";
+pub const PASSWORD: &str = "PASSWORD";
 
-pub const USERNAME_BASIC:&str = "BASIC_USERNAME";
-pub const PASSWORD_BASIC:&str = "BASIC_PASSWORD";
+pub const USERNAME_BASIC: &str = "BASIC_USERNAME";
+pub const PASSWORD_BASIC: &str = "BASIC_PASSWORD";
 
-pub const OIDC_AUTH:&str = "OIDC_AUTH";
-pub const BASIC_AUTH:&str = "BASIC_AUTH";
+pub const AUTH_MODE: &str = "AUTH_MODE";
+pub const OIDC_AUTH: &str = "OIDC_AUTH";
+pub const BASIC_AUTH: &str = "BASIC_AUTH";
 
 /*
 OIDC Keys
  */
 
-pub const OIDC_CLIENT_ID:&str = "OIDC_CLIENT_ID";
-pub const OIDC_REDIRECT_URI:&str = "OIDC_REDIRECT_URI";
-pub const OIDC_SCOPE:&str = "OIDC_SCOPE";
-pub const OIDC_AUTHORITY:&str = "OIDC_AUTHORITY";
+pub const OIDC_CLIENT_ID: &str = "OIDC_CLIENT_ID";
+pub const OIDC_REDIRECT_URI: &str = "OIDC_REDIRECT_URI";
+pub const OIDC_SCOPE: &str = "OIDC_SCOPE";
+pub const OIDC_AUTHORITY: &str = "OIDC_AUTHORITY";
+pub const OIDC_AUDIENCE: &str = "OIDC_AUDIENCE";
